# dpdk

./: .gitignore  dpdk-vscode-workspace.code-workspace  dpdk-workspace.code-workspace  meson.build
app/: trace1.acl
app/test/: test_lpm_perf.c  test_table_tables.c
app/test-eventdev/: test_order_common.c  test_perf_common.c
app/test-pipeline/: init.c
config/: common_base  meson.build
drivers/event/dsw/: dsw_evdev.c  dsw_event.c
examples/: rule_ipv4.db  rule_ipv6.db
examples/eventdev_pipeline/: pipeline_common.h  pipeline_worker_generic.c
examples/flow_classify/: ipv4_rules_file.txt
examples/flow_filtering/: main.c
examples/helloworld/: helloworld_trace.c  helloworld_trace.h  main.c  meson.build
examples/ip_pipeline/: cryptodev.c  meson.build
examples/l3fwd/: l3fwd_em.c  l3fwd_lpm.c  main.c
examples/l3fwd-acl/: main.c  rule_ipv4.db
examples/service_cores/: main2.c
lib/: meson.build
lib/librte_acl/: acl_bld.c  rte_acl.c
lib/librte_cryptodev/: rte_cryptodev.c
lib/librte_eal/: rte_eal_version.map
lib/librte_ethdev/: meson.build  rte_ethdev.c  rte_ethdev.h
lib/librte_eventdev/: rte_event_eth_rx_adapter.c  rte_event_eth_tx_adapter.c  rte_event_ring.c  rte_event_ring.h  rte_eventdev.c  rte_eventdev.h
lib/librte_flow_classify/: rte_flow_classify.c
lib/librte_hash/: rte_cuckoo_hash.c
lib/librte_kni/: rte_kni.c
lib/librte_lpm/: meson.build  rte_lpm.c  rte_lpm.h  rte_lpm_altivec.h  rte_lpm_neon.h  rte_lpm_sse.h
lib/librte_pipeline/: rte_pipeline.c  rte_port_in_action.c
lib/librte_port/: rte_port.h  rte_port_ethdev.c  rte_port_ring.c  rte_port_source_sink.c  rte_port_sym_crypto.c
lib/librte_ring/: rte_ring.c  rte_ring.h
lib/librte_table/: rte_table_acl.c  rte_table_array.c  rte_table_hash_cuckoo.c  rte_table_lpm.c  rte_table_stub.c
lib/librte_trace/: Makefile  meson.build  rte_acl_trace.h  rte_cryptodev_trace.h  rte_eal_trace.h  rte_eth_vhost_trace.h  rte_ethdev_trace.h  rte_event_dsw_trace.h  rte_event_ring_trace.h  rte_event_sw_trace.h  rte_eventdev_header_trace.h  rte_eventdev_trace.h  rte_flow_classify_trace.h  rte_hash_trace.h  rte_kni_trace.h  rte_lpm_trace.h  rte_pipeline_trace.h  rte_port_ethdev_trace.h  rte_port_ring_trace.h  rte_port_source_sink_trace.h  rte_port_sym_crypto_trace.h  rte_ring_trace.h  rte_spinlock_trace.h  rte_table_acl_trace.h  rte_table_array_trace.h  rte_table_hash_trace.h  rte_table_lpm_trace.h  rte_table_stub_trace.h  rte_trace.c  rte_trace_version.map  rte_vhost_trace.h
lib/librte_vhost/: meson.build  socket.c  vhost.c  vhost_user.c  virtio_net.c
mk/: rte.app.mk
(+22 files in other folders)
